# White-Dwarfs

./: .gitignore  CMakeLists.txt  LICENSE  README.md  plots.py  pyproject.toml
src/: config.h  constants.h  eqofstate.cpp  eqofstate.h  main.cpp  solver.cpp  solver.h
